--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,7 +6,7 @@
 /* Définition des variables globales pour les couleurs */
 :root {
   --color-text-white: #ffffff;
-  --color-text-ligth-gray: #cccccc;
+  --color-text-ligth-gray: #a7a7a7;
 
   --color-background-gray: #1d1d1d;
   --color-background-black: #0d0d0d;
@@ -27,6 +27,7 @@ body {
   background: var(--color-background-gray);
   color: var(--color-text-white);
   line-height: 1.5;
+  min-height: 100vh;
 }
 
 h1,
@@ -39,9 +40,12 @@ h1 {
   padding-bottom: 0.75rem;
 }
 
-h2,
-h3 {
+h2 {
   padding-bottom: 0.25em;
+}
+
+h3 {
+  font-size: 1.5rem;
 }
 
 p {
@@ -50,29 +54,35 @@ p {
 }
 
 a {
+  font-size: 0.875rem;
   display: inline-block;
   text-decoration: none;
   color: var(--color-secondary-white);
-  /* transition: transform 0.2s ease, color 0.2s ease; */
 }
 
 li {
   list-style: none;
 }
 
-/* a:hover,
-a:focus,
-a:active {
-  color: var(--color-secondary-blue-hover);
-  transform: scale(1.05);
-} */
-
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem 1.5rem 4rem;
+  padding: 1rem 1.5rem 4rem;
   width: 100%;
+}
+
+.helium-logo span {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.helium-logo {
+  transition: transform 0.2s ease;
+}
+
+.helium-logo:hover {
+  transform: scale(1.05);
 }
 
 nav {
@@ -82,6 +92,36 @@ nav {
 nav ul {
   display: flex;
   justify-content: space-between;
+}
+
+.nav-link {
+  position: relative;
+  transition: all 0.2s ease;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--color-text-ligth-gray);
+  transform: scale(1.01);
+}
+
+/* After: barre sous les liens dynamique */
+
+.nav-link::after {
+  content: ""; /* Crée une ligne vide */
+  position: absolute;
+  bottom: -5px; /* Place la ligne en bas */
+  left: 0;
+  width: 0; /* Ligne invisible au départ */
+  height: 2px; /* Épaisseur de la ligne */
+  background-color: var(--color-text-ligth-gray); /* Couleur de la ligne */
+  transition: width 0.3s ease; /* Transition fluide */
+}
+
+.nav-link:hover::after,
+.nav-link:focus::after,
+.nav-link:active::after {
+  width: 100%; /* La ligne s'étend sur tout le lien */
 }
 
 .hero {
@@ -115,7 +155,8 @@ nav ul {
   display: flex;
   background: var(--color-background-black);
   padding: 1rem;
-  margin: 0 0.5rem 1.5rem;
+  margin: 0 0.5rem 1.5em;
+  border-radius: 0.75rem;
   gap: 6rem;
 }
 
@@ -123,7 +164,8 @@ nav ul {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 30%;
+  width: 33%;
+  gap: 0.875rem;
 }
 
 .btns-container {
@@ -133,25 +175,27 @@ nav ul {
 }
 
 .btn {
-  font-size: 0.875rem;
   font-weight: 600;
   background: var(--color-secondary-blue);
   text-align: center;
+  letter-spacing: 0.063rem;
   border-radius: 0.75rem;
-  padding: 0.5rem 0.25rem;
+  padding: 0.5rem;
   width: 50%;
   transition: all 0.2s ease;
 }
 
-.btn:hover {
+.btn:hover,
+.btn:focus {
   background-color: var(--color-secondary-dark-blue);
+  transform: scale(1.01);
 }
 
 .our-investors {
   display: flex;
   flex-direction: column;
-  width: 70%;
-  gap: 2rem;
+  width: 67%;
+  gap: 3rem;
 }
 
 .our-investors h3 {
@@ -164,6 +208,16 @@ nav ul {
   justify-content: space-around;
 }
 
+.logos-container a img {
+  display: block;
+  transition: transform 0.2s ease;
+}
+
+.logos-container a img:hover,
+.logos-container a img:focus {
+  transform: scale(1.05);
+}
+
 #gv-logo {
   max-width: 4rem;
 }
@@ -172,4 +226,25 @@ nav ul {
 }
 #khosla-ventures-logo {
   max-width: 6rem;
+}
+
+.mobile-copyright {
+  display: none;
+}
+
+.desktop-copyright {
+  text-align: center;
+  font-size: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.desktop-copyright a {
+  font-size: 0.75rem;
+  transition: color 0.2s ease;
+  text-decoration: underline;
+}
+
+.desktop-copyright a:hover,
+.desktop-copyright a:focus {
+  color: var(--color-text-ligth-gray);
 }
